--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+CK_DB_CONNECTION=cksql
+CK_DB_HOST=127.0.0.1
+CK_DB_PORT=3306
+CK_DB_DATABASE=checklist_app
+CK_DB_USERNAME=root
+CK_DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
